--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -7,7 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print greeting
-        run: echo "Hello world!"
+        run: |
+          echo "Hola mundo!"
+          echo "Hello world!"
       - name: Print goodbye
         run: echo "Done - bye!"
 
